// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pkgPathsToRoot cycles returns expected paths for all packages: a@1 1`] = `
[
  [
    {
      "name": "a",
      "version": "1",
    },
  ],
]
`;

exports[`pkgPathsToRoot cycles returns expected paths for all packages: b@2 1`] = `
[
  [
    {
      "name": "b",
      "version": "2",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
]
`;

exports[`pkgPathsToRoot cycles returns expected paths for all packages: c@3 1`] = `
[
  [
    {
      "name": "c",
      "version": "3",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
]
`;

exports[`pkgPathsToRoot cycles returns expected paths for all packages: d@4 1`] = `
[
  [
    {
      "name": "d",
      "version": "4",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
]
`;

exports[`pkgPathsToRoot cycles returns expected paths for all packages: e@5 1`] = `
[
  [
    {
      "name": "e",
      "version": "5",
    },
    {
      "name": "b",
      "version": "2",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
  [
    {
      "name": "e",
      "version": "5",
    },
    {
      "name": "c",
      "version": "3",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
  [
    {
      "name": "e",
      "version": "5",
    },
    {
      "name": "g",
      "version": "7",
    },
    {
      "name": "f",
      "version": "6",
    },
    {
      "name": "d",
      "version": "4",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
]
`;

exports[`pkgPathsToRoot cycles returns expected paths for all packages: f@6 1`] = `
[
  [
    {
      "name": "f",
      "version": "6",
    },
    {
      "name": "d",
      "version": "4",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
  [
    {
      "name": "f",
      "version": "6",
    },
    {
      "name": "e",
      "version": "5",
    },
    {
      "name": "b",
      "version": "2",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
  [
    {
      "name": "f",
      "version": "6",
    },
    {
      "name": "e",
      "version": "5",
    },
    {
      "name": "c",
      "version": "3",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
]
`;

exports[`pkgPathsToRoot cycles returns expected paths for all packages: g@7 1`] = `
[
  [
    {
      "name": "g",
      "version": "7",
    },
    {
      "name": "f",
      "version": "6",
    },
    {
      "name": "d",
      "version": "4",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
  [
    {
      "name": "g",
      "version": "7",
    },
    {
      "name": "f",
      "version": "6",
    },
    {
      "name": "e",
      "version": "5",
    },
    {
      "name": "b",
      "version": "2",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
  [
    {
      "name": "g",
      "version": "7",
    },
    {
      "name": "f",
      "version": "6",
    },
    {
      "name": "e",
      "version": "5",
    },
    {
      "name": "c",
      "version": "3",
    },
    {
      "name": "a",
      "version": "1",
    },
  ],
]
`;
